# datafun-02-automation

./: .gitattributes  .gitignore  README.md  justice_completed_inventory.txt  justice_duty_01.txt  justice_duty_02.txt  justice_duty_03.txt  justice_maintenance.txt  justice_training.txt  justice_training_day_1.txt  justice_training_day_2.txt  mkdocs.yml  pyproject.toml  rerun_actions.txt  zensical.toml
data/output/justice/: justice_completed_maintenance.txt  justice_completed_training.txt  justice_duty_01.txt  justice_duty_02.txt  justice_duty_03.txt  justice_inventory.txt  justice_maintenance.txt  justice_training_day_1.txt  justice_training_day_2.txt  justice_training_day_3.txt
data/processed/: mos_job_summary.txt  mos_salary_summary.txt  mos_skill_summary.txt
data/processed/mos_reports/: mos_25B.txt  mos_36B.txt  mos_42A.txt  mos_68W.txt  mos_92F.txt
docs/: index.md
src/datafun/: app_justice.py  shared.py
src/mos_mapper/: app_mos_mapper.py
