# ============================================================
# pyproject.toml (Python project configuration)
# ============================================================

[project]
name = "mos-mapper"
version = "0.1.0"
description = "Translates U.S. Army MOS codes into civilian job insights and visualizations."
authors = [
    { name = "Justice", email = "justfera30@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-get-deps>=0.2.2",
    "mkdocstrings[python]>=1.0.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "datafun-toolkit",
    "matplotlib>=3.10.9",
]

[project.urls]
Homepage = "https://github.com/justicetefera"
Repository = "https://github.com/justicetefera/datafun-02-automation"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
]

docs = [
    "mkdocstrings[python]",
    "zensical",
]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
exclude = ["**/node_modules", "**/.*", ".venv", "**/__pycache__", "dist", "build"]
pythonVersion = "3.13"
reportMissingTypeStubs = "none"
reportMissingImports = "warning"
reportPrivateUsage = "none"
reportUntypedClassDecorator = "none"
reportArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportCallIssue = "none"
typeCheckingMode = "basic"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = " --cov=src --cov-report=term-missing"

[tool.ruff]
exclude = [
    ".eggs",
    "*.egg-info",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
]
line-length = 88
preview = false
target-version = "py313"
unsafe-fixes = false

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "preserve"

[tool.ruff.lint]
select = ["E","F","W","I","UP","B","PTH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["F401"]
"src/**/_version.py" = ["ALL"]
"notebooks/**/*.ipynb" = ["F821"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.hatch.build.targets.wheel]
packages = ["src/datafun"]
